--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 alembic==1.4.2
 aniso8601==8.0.0
 astroid==2.4.2
+attrs==19.3.0
 bcrypt==3.1.7
 cffi==1.14.0
 click==7.1.2
@@ -16,11 +17,16 @@ isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.11.2
 lazy-object-proxy==1.4.3
+linecache2==1.0.0
 Mako==1.1.3
 MarkupSafe==1.1.1
 marshmallow==3.7.0
 marshmallow-sqlalchemy==0.23.1
 mccabe==0.6.1
+more-itertools==8.4.0
+packaging==20.4
+pluggy==0.13.1
+py==1.9.0
 pycparser==2.20
 PyJWT==1.7.1
 pylint==2.5.3
@@ -28,6 +34,7 @@ pylint-flask==0.6
 pylint-flask-sqlalchemy==0.2.0
 pylint-plugin-utils==0.6
 PyMySQL==0.9.3
+pyparsing==2.4.7
 python-dateutil==2.8.1
 python-dotenv==0.14.0
 python-editor==1.0.4
@@ -35,5 +42,7 @@ pytz==2020.1
 six==1.15.0
 SQLAlchemy==1.3.18
 toml==0.10.1
+traceback2==1.4.0
+wcwidth==0.2.5
 Werkzeug==1.0.1
 wrapt==1.12.1
