--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+sudo: required
+services
+- docker
 language: python
 python:
 - "3.8.0"
@@ -7,3 +10,5 @@ install:
 script:
 # unit test
 - python -m unittest -v
+after_success:
+- sh .travis/deploy_dockerhub.sh
