--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,4 @@ script:
     - python -m unittest -v
 after_success:
     - sh .travis/deploy__dockerhub.sh
+    – test “$TRAVIS_BRANCH” = “master” && sh .travis/deploy__heroku.sh
