remove docker from deployment process

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
-sudo: required
-services:
-    - docker
+# sudo: required
+# services:
+#     - docker
 language: python
 python:
     - "3.8.0"
@@ -11,5 +11,12 @@ script:
 # unit test
     - python -m unittest -v
 after_success:
-    - sh .travis/deploy__dockerhub.sh
-    – test “$TRAVIS_BRANCH” = “master” && sh .travis/deploy__heroku.sh
+    deploy:
+        provider: heroku
+        api_key: $HEROKU_API_KEY
+        app: dante-bk-hub
+        on:
+        repo: pat64j/dante-backend
+# after_success:
+#     - sh .travis/deploy__dockerhub.sh
+#     – test “$TRAVIS_BRANCH” = “master” && sh .travis/deploy__heroku.sh
