--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ Flask-Migrate==2.5.3
 Flask-RESTful==0.3.8
 Flask-Seeder==1.1.1
 Flask-SQLAlchemy==2.4.3
+gunicorn==20.0.4
 isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.11.2
