--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,8 @@ mccabe==0.6.1
 more-itertools==8.4.0
 packaging==20.4
 pluggy==0.13.1
+psycopg2==2.8.5
+psycopg2-binary==2.8.5
 py==1.9.0
 pycparser==2.20
 PyJWT==1.7.1
