--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ alembic==1.4.2
 aniso8601==8.0.0
 astroid==2.4.2
 attrs==19.3.0
+autopep8==1.5.3
 bcrypt==3.1.7
 cffi==1.14.0
 click==7.1.2
@@ -31,6 +32,7 @@ pluggy==0.13.1
 psycopg2==2.8.5
 psycopg2-binary==2.8.5
 py==1.9.0
+pycodestyle==2.6.0
 pycparser==2.20
 PyJWT==1.7.1
 pylint==2.5.3
