--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,9 @@ astroid==2.4.2
 attrs==19.3.0
 autopep8==1.5.3
 bcrypt==3.1.7
+certifi==2020.6.20
 cffi==1.14.0
+chardet==3.0.4
 click==7.1.2
 Flask==1.1.2
 Flask-Bcrypt==0.7.1
@@ -15,7 +17,9 @@ Flask-Migrate==2.5.3
 Flask-RESTful==0.3.8
 Flask-Seeder==1.1.1
 Flask-SQLAlchemy==2.4.3
+future==0.18.2
 gunicorn==20.0.4
+idna==2.10
 isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.11.2
@@ -40,15 +44,20 @@ pylint-flask==0.6
 pylint-flask-sqlalchemy==0.2.0
 pylint-plugin-utils==0.6
 PyMySQL==0.9.3
+pyngrok==4.1.11
 pyparsing==2.4.7
 python-dateutil==2.8.1
 python-dotenv==0.14.0
 python-editor==1.0.4
 pytz==2020.1
+PyYAML==5.3.1
+requests==2.23.0
 six==1.15.0
 SQLAlchemy==1.3.18
 toml==0.10.1
 traceback2==1.4.0
+trafaret==2.0.2
+urllib3==1.25.10
 wcwidth==0.2.5
 Werkzeug==1.0.1
 wrapt==1.12.1
